Fixed some elements' overlapping, Adapated Previous edition section to the UI

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
 html {
   scroll-behavior: smooth;
 }
+
 .container {
   @apply w-11/12 mx-auto;
 }
@@ -53,7 +55,7 @@ html {
 
 @media screen and (min-width: 1600px) {
   .animated-text {
-    height: 108px;
+    height: 114px;
     line-height: 110px;
   }
 }
